# Side-Step

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  PRE_PUSH_AUDIT_GENERAL.md  PRE_PUSH_AUDIT_WINDOWS.md  README.md  install_linux.sh  install_windows.bat  install_windows.ps1  main.py  pyproject.toml  requirements-sidestep.txt  requirements.txt  sidestep.bat  sidestep.sh  sidestep_tui.py  train.py
Side-Step Obsidian Guide/: End-to-End Tutorial.md  Model Management.md  ObsidianREADME.md  Preprocessing++.md  Preset Management.md  RepositoryREADME.md  VRAM Optimization Guide.md
Side-Step Obsidian Guide/.obsidian/: workspace.json
acestep/: __init__.py
acestep/training_v2/: _compat.py  configs.py  dataset_builder.py  estimate.py  fixed_lora_module.py  gpu_utils.py  make_test_fixtures.py  model_discovery.py  model_loader.py  optim.py  path_utils.py  preprocess.py  preprocess_prompt.py  settings.py  tensorboard_utils.py  trainer_basic_loop.py  trainer_fixed.py  trainer_helpers.py  trainer_vanilla.py
assets/presets/: quick_test.json
frontend/: index.html
frontend/css/: components.css  layout.css  tokens.css  validation.css
frontend/electron/: main.js
frontend/js/: api-cli.js  api.js  app-state.js  chart-interaction.js  dataset.js  defaults.js  defaults.json  fallback.js  history.js  palette.js  reactivity-ext.js  training-chart.js  training.js  tutorial.js  utils.js  validation.js  vram.js  workspace-behaviors.js  workspace-charts.js  workspace-config.js  workspace-datasets.js  workspace-lab.js  workspace-setup.js  workspace.js
sidestep_documentation/: CLI Argument Reference.md  Getting Started.md  Loss Weighting and CFG Dropout.md  ObsidianREADME.md  Preprocessing++.md  Shift and Timestep Sampling.md  The Settings Wizard.md  Training Guide.md  Using Your Adapter.md  VRAM Optimization Guide.md
sidestep_engine/: __init__.py  _compat.py  settings.py  training_defaults.py
sidestep_engine/analysis/: audio_analysis.py
sidestep_engine/cli/: args.py  config_builder.py  train_fixed.py  validation.py
sidestep_engine/core/: __init__.py  adaptive_timestep.py  config_factory.py  configs.py  constants.py  dataset_scanner.py  dataset_validator.py  ema.py  formula_scheduler.py  lora_module.py  optim.py  progress_writer.py  run_discovery.py  trainer.py  trainer_helpers.py  trainer_loop.py
sidestep_engine/data/: caption_config.py  caption_provider_gemini.py  caption_provider_local.py  caption_provider_openai.py  dataset_builder.py  enrich_song.py  http_utils.py  lyrics_provider_genius.py  lyrics_provider_server.py  metadata_provider_music_flamingo.py  preprocess.py  preprocess_discovery.py  preprocess_prompt.py  preprocess_vae.py  sidecar_io.py  sidecar_metadata.py
sidestep_engine/gui/: __init__.py  file_ops.py  security.py  (+2 more)
test_units/: test_adapter_configs.py  test_adapter_injection.py  test_adapter_save_load.py  test_adapter_wizard_steps.py  test_adaptive_timestep.py  test_attention_backend_selection.py  test_audio_duration.py  test_audio_normalize.py  test_audit_fixes.py  test_audit_round2_fixes.py  test_caption_config.py  test_caption_provider_gemini.py  test_caption_provider_openai.py  test_checkpoint_runtime_state.py  test_cli_alignment.py  test_cli_cleanup.py  test_config_builder_fisher.py  test_dataset_builder.py  test_dependency_preflight.py  test_ema.py  test_enrich_song.py  test_entrypoint_alignment_regressions.py  test_fabric_device_selection.py  test_fisher_io.py  test_fisher_modules.py  test_fisher_preview.py  test_fisher_ranks.py  test_fisher_spectral.py  test_fisher_timestep.py  test_flow_preset_subset.py  test_formula_scheduler.py  test_gpu_utils.py  test_gui_audit_fixes.py  test_gui_config_coercion.py  test_gui_integration.py  test_gui_qt_permissions.py  test_inline_preprocess.py  test_inline_preprocess_trigger_tag.py  test_latent_chunking.py  test_lycoris_param_unfreezing.py  (+41 more)
tests/: test_attention_backend_selection.py  test_audio_normalize.py  test_audit_fixes.py  test_compat.py  test_config_builder_fisher.py  test_data_module_v2.py  test_dataset_builder.py  test_dataset_builder_v2.py  test_dependency_preflight.py  test_fisher_analysis_helpers.py  test_fisher_io.py  test_fisher_modules.py  test_fisher_preview.py  test_fisher_ranks.py  test_fisher_spectral.py  test_fisher_timestep.py  test_flow_preset_subset.py  test_manifest_windows_paths.py  test_model_search_picker.py  test_model_weight_check.py  test_preprocess_cli_args.py  test_preset_error_messages.py  test_progress_eta_resume.py  test_progress_live_log_safety.py  test_projection_selection.py  test_prompt_helpers_path_errors.py  test_rng_resume.py  test_tensorboard_launcher.py  test_tensorboard_logging_guards.py  test_tensorboard_utils_v2.py  test_training_memory_features.py  test_training_review_flow.py  test_turbo_auto_select.py  test_validation_module.py  test_validation_resume.py  test_wizard_dataset_preflight.py  test_wizard_message_consistency.py  test_wizard_pp_guardrails.py  test_wizard_session_carryover.py
(+75 files in other folders)
