[project]
name = "side-step"
version = "1.1.2-beta"
description = "Standalone training toolkit for ACE-Step 1.5 models -- Multiadapter fine-tuning"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # ── PyTorch (CUDA 12.8 wheels for Windows and Linux) ─────────────
    "torch==2.7.1+cu128; sys_platform == 'win32'",
    "torchaudio==2.7.1+cu128; sys_platform == 'win32'",
    "torchvision==0.22.1+cu128; sys_platform == 'win32'",
    "torch==2.10.0+cu128; sys_platform == 'linux'",
    "torchaudio==2.10.0+cu128; sys_platform == 'linux'",
    "torchvision==0.25.0+cu128; sys_platform == 'linux'",
    # macOS (CPU / MPS)
    "torch>=2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torchaudio>=2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torchvision>=0.24.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # ── Core ML dependencies ─────────────────────────────────────────
    "transformers>=4.51.0,<4.58.0",
    "diffusers",
    "lightning>=2.0.0",
    "peft>=0.18.0",
    # accelerate: not listed — peft requires accelerate>=0.21.0 (installed transitively).
    "safetensors",
    "einops>=0.8.1",
    # ── Audio loading & normalization (needed for preprocessing) ────
    "torchcodec>=0.9.1",
    "soundfile>=0.13.1",
    "pyloudnorm>=0.1.0",
    # ── Model runtime (ResidualFSQ in HF modeling.py — not torchao) ───
    "vector-quantize-pytorch>=1.27.15",
    # ── Logging / monitoring ─────────────────────────────────────────
    "loguru>=0.7.3",
    "tensorboard>=2.20.0",
    # ── CLI / TUI ────────────────────────────────────────────────────
    "rich>=13.0.0",
    # (AI sidecar / optional adapters / GUI — see [project.optional-dependencies])
    # ── Flash Attention (prebuilt wheels -- no compilation) ────────
    # Auto-installed on supported platforms; runtime falls back to
    # SDPA silently when flash-attn is absent (macOS, Python != 3.11).
    "flash-attn; sys_platform != 'darwin' and python_version == '3.11'",
    # librosa: used by preprocess_audio resampling (soundfile path); keep in core.
    "librosa>=0.10.0",
]

[project.scripts]
sidestep = "train:main"

[project.optional-dependencies]
# Web UI: FastAPI + GPU telemetry + cover-art metadata (sidestep gui)
gui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "nvidia-ml-py>=12.0.0",
    "mutagen>=1.47.0",
]
# Remote / local caption & lyrics APIs (sidestep captions, dataset AI flows)
captions = [
    "lyricsgenius>=3.0.1",
    "google-genai>=1.0.0",
    "openai>=1.54.0",
    "qwen-omni-utils>=0.0.6",
]
# Stem separation for offline BPM/key/ts analysis (sidestep audio-analyze)
audio_analyze = [
    "demucs>=4.0.0",
]
# LoKR / LoHA (not needed for plain LoRA / DoRA / OFT)
lycoris = [
    "lycoris-lora>=2.0.0",
]
# AdamW8bit and Prodigy (training falls back to AdamW if missing)
optimizers = [
    "bitsandbytes>=0.45.0",
    "prodigyopt>=1.1.2",
]
# Optimum-quanto (+ torchao transitive); training uses Quanto qtypes only (qfloat8, qint8, …)
quantize = [
    "optimum-quanto>=0.2.4",
    "torchao>=0.14.1,<0.16.0",
]
tui = ["textual>=0.47.0"]
native = [
    # pywebview fallback (used when Electron is not installed)
    "pywebview[qt]>=5.0; sys_platform == 'linux'",
    "pywebview>=5.0; sys_platform != 'linux'",
    "pygobject>=3.54.5; sys_platform == 'linux'",
]
# One-shot install matching the previous all-in-one dependency set
full = [
    "side-step[gui,captions,audio_analyze,lycoris,optimizers,quantize,tui]",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
# Prebuilt flash-attn wheels -- same repos ACE-Step uses.
# No CUDA toolkit needed, no 20-min compile.  Just a wheel download.
flash-attn = [
    { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.7.12/flash_attn-2.8.3+cu128torch2.10-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
    { url = "https://github.com/sdbds/flash-attention-for-windows/releases/download/2.8.2/flash_attn-2.8.2+cu128torch2.7.1cxx11abiFALSEfullbackward-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sidestep_engine"]
include = ["train.py"]
